started coding personal website!

--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,20 @@ so bubbly, fun, happy, etc. To acheive this look I did the following
 
 
 */
+.gradient-background {
+   background: linear-gradient(300deg,#ffffff,#3c26db,#6db6e1);
+   background-size: 180% 180%;
+   animation: gradient-animation 18s ease infinite;
+ }
+ 
+ @keyframes gradient-animation {
+   0% {
+     background-position: 0% 50%;
+   }
+   50% {
+     background-position: 100% 50%;
+   }
+   100% {
+     background-position: 0% 50%;
+   }
+ }
