--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ so bubbly, fun, happy, etc. To acheive this look I did the following
 
 */
 .gradient-background {
-   background: linear-gradient(300deg,#ffffff,#3c26db,#6db6e1);
+   background: linear-gradient(300deg,#AAC4F5,#FFF2C6,#8CA9FF);
    background-size: 180% 180%;
    animation: gradient-animation 18s ease infinite;
  }
