added an image of myself and added a nav bar

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,7 @@ so bubbly, fun, happy, etc. To acheive this look I did the following
      background-position: 0% 50%;
    }
  }
+
+ .imgStyle{
+  border-radius: 10%;
+ }
